--- a/apps/nginx/deployment-nginx.yaml
+++ b/apps/nginx/deployment-nginx.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx:1.14.2
+        image: nginx-unprivileged:1.22
         ports:
         - containerPort: 8080
